# scaler

./: .gitignore  PROJECT_CONTEXT.md  TESTING.md
.claude/: settings.local.json
backend/: config.py  main.py  models.py  orchestrator.py  requirements.txt  telemetry.py  test_manual.sh  toxiproxy.py
scheduler/: ARCHITECTURE.md  docker-compose.yaml  gen_proto.sh  schema.cql
scheduler/submitter/: Dockerfile  main.cpp
scheduler/watcher/: main.cpp
submitter/: CMakeLists.txt  main.cpp
submitter/proto/: scheduler.proto
system-design-sim/: CLAUDE.md  package-lock.json  package.json
system-design-sim/src/app/: page.tsx
system-design-sim/src/app/api/chat/: route.ts
system-design-sim/src/components/: Canvas.tsx  Dashboard.tsx
system-design-sim/src/lib/: topology-schema.ts
watcher/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
watcher/proto/: watcher.proto
